--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
 <p>We will post and publish a documentation of the building process and some videos </p>
       </section>
+      <h4>First Impressions</h4>
+      The first impressions of the lamp just buil on a breadboard
+      <iframe width="420" height="315" src="http://www.youtube.com/embed/-9uMcQn_3bY" frameborder="0" allowfullscreen></iframe>
+      
     </div>
 
     <!-- FOOTER  -->
