--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
         <h3>Welcome to the Lumen Color Project</h3>
 
 <p>We will post and publish a documentation of the building process and some videos </p>
-      </section>
-      <h4>First Impressions</h4>
-      The first impressions of the lamp just buil on a breadboard
+     <h3>First Impressions</h3>
+      The first impressions of the lamp just buil on a breadboard<br />
       <iframe width="420" height="315" src="http://www.youtube.com/embed/-9uMcQn_3bY" frameborder="0" allowfullscreen></iframe>
-      
+       </section>
     </div>
 
     <!-- FOOTER  -->
